# zbank_payroll

./: Cargo.toml  README.md  dfx.json  package.json  webpack.config.js
src/canister/backend/: Cargo.toml  endpoint.did
src/canister/backend/src/: lib.rs
src/canister/backend/src/bean/: executed_transaction_entity.rs  executed_transaction_entity_store.rs  mod.rs  pending_transaction_entity.rs  pending_transaction_entity_store.rs  scheduled_transaction_entity.rs  scheduled_transaction_entity_store.rs  scheduled_transaction_request.rs  scheduled_transaction_timer_entity.rs  wallet_response.rs
src/canister/backend/src/enums/: charge_fees_from.rs  currency.rs  mod.rs  network.rs  reviewed_status.rs  routine_type.rs
src/canister/backend/src/util/: id_util.rs  mod.rs
src/canister/bitcoin/: Cargo.toml
src/canister/frontend/: angular.json  package.json
src/canister/frontend/src/: index.html  main.ts  polyfills.ts  styles.less  styles.scss
src/canister/frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  ic.bitcoin.service.ts  ic.service.spec.ts  ic.service.ts
src/canister/frontend/src/app/pages/approval/: approval-routing.module.ts  approval.component.html  (+4 more)
src/canister/frontend/src/common/: style-common-variable.scss  style-common.scss
src/canister/frontend/src/common/interface/: interface.ts
src/canister/frontend/src/environments/: environment.ts
src/canister/frontend/src/utils/: util.service.ts
src/zbank_payroll_backend/: Cargo.toml
src/zbank_payroll_frontend/src/: index.html  index.js
(+16 files in other folders)
