[package]
name = "zbank_payroll_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
lazy_static = "1.4.0"
serde = "1.0.163"
serde_cbor = "0.11.2"
rand = "0.6.0"
ic-cdk-timers = "0.1.0"